# video-fruit-ripeness-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.sh
app/: app.py  config.py  config.yaml  frontend.html  main.py  precompress_videos.py
app/static/: scripts.js  styles.css
data/: README.md
